<resources>
    <string name="app_name">FeetrackerApp</string>
    <string name="ActivatingLink">An Activation Code has sent to your email. Please check your mail box and active your acount by clicking the activation code!</string>
    <string name="rooms">تعداد اتاق</string>
    <string name="age">سن بنا</string>
    <string name="area">متراژ</string>
    <string name="default_room">1</string>
    <string name="default_area">70</string>
    <string name="app_name_fa">فیجو</string>
    <string name="forget_password">رمز عبورت رو فراموش کردی؟</string>
    <string name="signup">حساب کاربری نداری؟</string>
    <string name="welcome">سلام!</string>
    <string name="login_is_required">برای ادامه باید وارد حساب کاربریت بشی..</string>
    <string name="login">ورود به فیجو</string>
    <string name="already_have_account">از قبل حساب کاربری داشتی؟</string>
    <string name="register_statement">یک دقیقه ای حساب کاربری بساز..</string>
    <string name="register">ثبت نام</string>
    <string name="query_price_title">دنبال چی می گردی؟</string>
    <string name="go_price">پیدا کن</string>
    <string name="radio_sale">خرید / فروش</string>
    <string name="radio_rent">رهن / اجاره</string>
    <string name="propertytype_title">نوع ملک</string>
    <string name="location_title">منطقه مورد نظر</string>
    <string name="default_age">1</string>
    <string name="server_error">برقراری ارتباط با سرور مقدور نیست!</string>
</resources>
