<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    tools:context=".queryprice.QueryPriceActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark">

        <com.zahra.feetrackerapp.utils.views.myTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/query_price_title"
            android:textColor="@color/colorLightAccent"
            android:textStyle="bold" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:background="@drawable/windowformat"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/radioOffertype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioSale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorPrimaryDark"
                    android:checked="true"
                    android:text="@string/radio_sale" />

                <RadioButton
                    android:id="@+id/radioRent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorPrimaryDark"
                    android:text="@string/radio_rent" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <com.zahra.feetrackerapp.utils.views.myTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/propertytype_title"
                android:textColor="@color/colorSecondaryText" />

            <com.zahra.feetrackerapp.utils.views.myEditText
                android:id="@+id/property_type"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/txtboxformat"
                android:hint="---"
                android:inputType="none"
                android:padding="12dp"
                android:textColor="@color/colorText"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">


            <com.zahra.feetrackerapp.utils.views.myTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/location_title"
                android:textColor="@color/colorSecondaryText" />

            <com.zahra.feetrackerapp.utils.views.myEditText
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/txtboxformat"
                android:gravity="right|center_vertical"
                android:hint="location"
                android:inputType="none"
                android:padding="12dp"
                android:textColor="@color/colorText"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <com.zahra.feetrackerapp.utils.views.myTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/area" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <com.zahra.feetrackerapp.utils.views.myTextView
                    android:id="@+id/area_minus"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:background="@drawable/txtboxformat"
                    android:gravity="center|center_vertical"
                    android:text="-"
                    android:textSize="20sp" />

                <com.zahra.feetrackerapp.utils.views.myEditText
                    android:id="@+id/area"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="@string/default_area"
                    android:textSize="18sp" />

                <com.zahra.feetrackerapp.utils.views.myTextView
                    android:id="@+id/area_plus"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:background="@drawable/txtboxformat"
                    android:gravity="center|center_vertical"
                    android:text="+"
                    android:textSize="20dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <com.zahra.feetrackerapp.utils.views.myTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/rooms" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <com.zahra.feetrackerapp.utils.views.myTextView
                    android:id="@+id/room_minus"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:background="@drawable/txtboxformat"
                    android:gravity="center"
                    android:text="-"
                    android:textSize="20sp" />

                <com.zahra.feetrackerapp.utils.views.myEditText
                    android:id="@+id/rooms"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="@string/default_room"
                    android:textSize="18sp" />

                <com.zahra.feetrackerapp.utils.views.myTextView
                    android:id="@+id/room_plus"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:background="@drawable/txtboxformat"
                    android:gravity="center"
                    android:text="+"
                    android:textSize="20dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <com.zahra.feetrackerapp.utils.views.myTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/age" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <com.zahra.feetrackerapp.utils.views.myTextView
                    android:id="@+id/age_minus"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:background="@drawable/txtboxformat"
                    android:gravity="center"
                    android:text="-"
                    android:textSize="20sp" />

                <com.zahra.feetrackerapp.utils.views.myEditText
                    android:id="@+id/age"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="@string/default_age"
                    android:textSize="18sp" />

                <com.zahra.feetrackerapp.utils.views.myTextView
                    android:id="@+id/age_plus"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:background="@drawable/txtboxformat"
                    android:gravity="center"
                    android:text="+"
                    android:textSize="20dp" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="horizontal">

            <com.zahra.feetrackerapp.utils.views.myTextView
                android:id="@+id/go"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/btnformate"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/go_price"
                android:textAlignment="center"
                android:textColor="@color/colorLightAccent"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
