<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" />

    <com.zahra.feetrackerapp.utils.views.myTextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="1"
        android:gravity="top"
        android:paddingEnd="10dp"
        android:text="@string/register_statement"
        android:textColor="@color/colorAccent"
        android:textDirection="rtl"
        android:textSize="16sp" />

    <com.zahra.feetrackerapp.utils.views.myEditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="1.2"
        android:background="@drawable/txtboxformat"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:hint="E-mail"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="@color/colorText" />

    <com.zahra.feetrackerapp.utils.views.myEditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1.2"
        android:background="@drawable/txtboxformat"
        android:drawableLeft="@drawable/usrusr"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:hint="Username"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="@color/colorText" />

    <com.zahra.feetrackerapp.utils.views.myEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1.2"
        android:background="@drawable/txtboxformat"
        android:drawableLeft="@drawable/lockers"
        android:gravity="center_vertical"
        android:drawablePadding="16dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/colorText" />

    <com.zahra.feetrackerapp.utils.views.myTextView
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1.1"
        android:background="@drawable/btnformate"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/colorLightAccent"
        android:textSize="14sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center|bottom"
        android:layout_weight="5"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/already_have_account"
            android:textColor="@color/colorSecondaryText"
            android:textSize="16dp" />

    </LinearLayout>
</LinearLayout>